Issue #901 - truncate ipv6 overflow

--- a/ui/css/admin.css
+++ b/ui/css/admin.css
@@ -104,6 +104,8 @@
 
 .toplevel_page_wp_stream .column-ip {
 	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .toplevel_page_wp_stream .stream-filter-object-id {
